--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -48,7 +48,7 @@
 
             </article>
         {% endfor %}
-         <article class="text box third" id="news">
+         <article class="text box full" id="news">
            <a class="wraplink" href="{{ news.get_absolute_url }}">
            <div>
            <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
