--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -33,6 +33,18 @@
            </div>
            </a>
         </article>
+         {% for project in project_list|slice:"6:8" %}
+            <article class="project list box quarter" id="{{ project.slug }}">
+                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+
+                {% for image in project.projectimage_set.all %}
+                    {% if image.is_main %}
+                        <a href="{{ project.get_absolute_url }}">
+                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+                    {% endif %}
+                {%  endfor %}
+            </article>
+        {% endfor %}
      </div>
      <div class="third">
          <article class="text box full" id="news">
