--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -26,7 +26,7 @@
          <article class="text box half update" id="article">
            <a class="wraplink" href="{{ article.get_absolute_url }}">
            <div>
-           <p class="date">Research</p>
+           <h1>Research</h1>
            <h2>{{ article.title }}</h2>
            {{ article.excerpt_html|safe|truncatewords_html:20 }}
            <p><a href="{{ article.get_absolute_url }}" class="tease">Read More</a></p>
@@ -50,7 +50,7 @@
          <article class="text box full update" id="news">
            <a class="wraplink" href="{{ news.get_absolute_url }}">
            <div>
-           <p class="date">{{ news.date_published|date:"M d, Y" }}</p>
+           <h1>News</h1>
            <h2>{{ news.title }}</h2>
            {{ news.excerpt_html|safe|truncatewords_html:20 }}
            <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
