--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -547,8 +547,8 @@ body.studio.news .main{
 .home article.update h1 {
     font-weight:bold;
     position:absolute;
-    bottom:0;
-    right:0;
+    bottom:10px;
+    right:10px;
     z-index:0;
     color:rgba(255,255,255,0.1);
     font-size:5em;
