--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -547,8 +547,8 @@ body.studio.news .main{
 .home article.update h1 {
     font-weight:bold;
     position:absolute;
-    bottom:10px;
-    right:10px;
+    bottom:5px;
+    right:5px;
     z-index:0;
     color:rgba(255,255,255,0.1);
     font-size:5em;
@@ -565,7 +565,8 @@ body.studio.news .main{
     clear:both;
     font-weight:normal;
     font-size:1.2857em;
-    margin:5px 0;
+    margin:0;
+    padding: 0;
 }
 
 .home article#news div {
