--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -565,7 +565,7 @@ body.studio.news .main{
     clear:both;
     font-weight:normal;
     font-size:1.2857em;
-    margin:0;
+    margin:10px 0 0 0;
     padding: 0;
 }
 
