--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -566,7 +566,7 @@ body.studio.news .main{
     font-weight:normal;
     font-size:1.2857em;
     margin:0;
-    padding: 10px 0 0 0;
+    padding: 10px 0 5px 0;
 }
 
 .home article#news div {
