--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -2,7 +2,55 @@
 {% load generic_flatblocks %}
 {% block body_class %}contact{% endblock body_class %}
 {% block content %}
-    <section class="full box">
-        <h1>Contact</h1>
+    <section class="box sixth">
+        <img class="flex" src="{{ STATIC_URL }}images/contact/contact_01.jpg" alt="Map Tile 1"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_02.jpg" alt="Map Tile 2"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_03.jpg" alt="Map Tile 3"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_04.jpg" alt="Map Tile 4"/>
+    </section>
+    <section class="box third">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_06.jpg" alt="Map Tile 6"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_07.jpg" alt="Map Tile 7"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_08.jpg" alt="Map Tile 8"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_09.jpg" alt="Map Tile 9"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_10.jpg" alt="Map Tile 10"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_11.jpg" alt="Map Tile 11"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_12.jpg" alt="Map Tile 12"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_13.jpg" alt="Map Tile 13"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_14.jpg" alt="Map Tile 14"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_15.jpg" alt="Map Tile 15"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_16.jpg" alt="Map Tile 16"/>
+    </section>
+    <section class="box sixth">
+        <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_17.jpg" alt="Map Tile 17"/>
     </section>
 {% endblock content %}
