added images for contact page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -107,7 +107,7 @@
 
         $(window).resize(function() {
             Flex();
-            Sqaure();
+            Square();
         });
     </script>
 {% endblock js_local %}
