--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -14,7 +14,7 @@
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_04.jpg" alt="Map Tile 4"/>
     </section>
-    <section class="box third">
+    <section class="box third flex" id="contact-info">
         {%  gblock "contact_info" for "content.ContentBlock" %}
     </section>
     <section class="box sixth">
@@ -54,3 +54,18 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_17.jpg" alt="Map Tile 17"/>
     </section>
 {% endblock content %}
+{% block js_local %}
+    <script type="text/javascript">
+        function Flex() {
+            var height = $("section.sixth").width();
+            $(".flex").css('min-height', height);
+        }
+        $(document).ready(function() {
+            Flex();
+        });
+
+        $(window).resize(function() {
+            Flex();
+        });
+    </script>
+{% endblock js_local %}
