--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -14,7 +14,7 @@
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_04.jpg" alt="Map Tile 4"/>
     </section>
-    <section class="box third flex" id="contact-info">
+    <section class="box third" id="contact-info">
         {%  gblock "contact_info" for "content.ContentBlock" %}
     </section>
     <section class="box sixth">
@@ -58,7 +58,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $("section.sixth").width();
-            $(".flex").css('min-height', height);
+            $("#contact-info").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
