--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1186,8 +1186,8 @@ ul#project-nav {
 }
 
 #contact-info div {
-    position:absolute;
-    z-index:1;
+    /*position:absolute;
+    z-index:1;*/
     background: rgba(255,255,255,0.8);
 }
 
