added images for contact page

--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -58,7 +58,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".sixth").width();
-            $("#contact-info").css('min-height', height);
+            $("").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
