added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1182,8 +1182,8 @@ ul#project-nav {
 }
 
 #contact-info img {
-    position:absolute;
-    z-index:0;
+    /*position:absolute;
+    z-index:0;*/
 }
 
 #contact-info div {
