--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -15,7 +15,10 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_04.jpg" alt="Map Tile 4"/>
     </section>
     <section class="box third" id="contact-info">
-        <img style="width:100%; padding: 0; margin: 0; display:block;" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
+        <img class="flex" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
+        <div>
+        {%  gblock "contact_info" for "content.ContentBlock" %}
+        </div>
     </section>
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_06.jpg" alt="Map Tile 6"/>
@@ -58,7 +61,7 @@
     <script type="text/javascript">
         function Flex() {
             var height = $(".sixth").width();
-            $("").css('min-height', height);
+            $("#contact-info div").css('min-height', height);
         }
         $(document).ready(function() {
             Flex();
