--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1187,6 +1187,14 @@ ul#project-nav {
 }
 
 #contact-info div {
+    width:100%;
+    height:100%;
+    padding: 10px;
+     -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    box-sizing: border-box;
     position:absolute;
     z-index:1;
     background: rgba(255,255,255,0.8);
