--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -30,7 +30,9 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_08.jpg" alt="Map Tile 8"/>
     </section>
     <section class="box sixth">
+        <a href=""http://maps.google.com/maps?q=92+West+3rd+Street,+Brooklyn,+New+York,+NY&hl=en&sll=40.755912,-74.051291&sspn=0.393219,0.748444&vpsrc=0&hnear=92+3rd+St,+Brooklyn,+Kings,+New+York+11231&t=h&z=16">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_09.jpg" alt="Map Tile 9"/>
+        </a>
     </section>
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_10.jpg" alt="Map Tile 10"/>
