added images for contact page

--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -30,7 +30,7 @@
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_08.jpg" alt="Map Tile 8"/>
     </section>
     <section class="box sixth">
-        <a href="http://maps.google.com/maps/place?q=92+West+3rd+Street,+Brooklyn,+New+York,+NY&hl=en&ftid=0x89c25af8762761a5:0xa661dc0560a7a1c4">
+        <a href="http://g.co/maps/zxa4h">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_09.jpg" alt="Map Tile 9"/>
         </a>
     </section>
