--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -504,7 +504,7 @@ body.studio.news .main{
 }
 
 .home article#profile p {
-    padding:0 10px;
+    padding:0;
 }
 
 .home article#profile h1 {
@@ -523,7 +523,7 @@ body.studio.news .main{
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.71428em;
     text-transform: uppercase;
-    padding:10px;
+    padding:0 0 10px 0;
     color:#3d6e31;
 }
 
