--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -2,97 +2,92 @@
 {% load generic_flatblocks %}
 {% block body_class %}home{% endblock body_class%}
 {% block content %}
-     <div class="two-thirds">
-        <div class="full">
+<div class="two-thirds">
+    <div class="full">
         {% for project in project_list|slice:"1:5" %}
-            <article class="project list box quarter" id="{{ project.slug }}">
-                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+        <article class="project list box quarter" id="{{ project.slug }}">
+            <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
 
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-            </article>
+            {% for image in project.projectimage_set.all %}
+            {% if image.is_main %}
+                <a href="{{ project.get_absolute_url }}">
+                    <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+            {% endif %}
+            {%  endfor %}
+        </article>
         {% endfor %}
-        </div>
-        <div class="full">
-            {% for project in project_list|slice:"5:6" %}
-            <article class="project list box quarter" id="{{ project.slug }}">
-                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+    </div>
+    <div class="full">
+        {% for project in project_list|slice:"5:6" %}
+        <article class="project list box quarter" id="{{ project.slug }}">
+            <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
 
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-            </article>
+            {% for image in project.projectimage_set.all %}
+            {% if image.is_main %}
+                <a href="{{ project.get_absolute_url }}">
+                    <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+            {% endif %}
+            {%  endfor %}
+        </article>
         {% endfor %}
-
         <article class="text box three-quarters" id="profile">
-             <a class="wraplink" href="{% url studio %}">
-             <div>
-                {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-                <p><a href="{% url studio %}" class="tease">Read More</a></p>
-             </div>
-             </a>
+            <a class="wraplink" href="{% url studio %}">
+            <div>
+            {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
+            <p class="tease">Read More</p>
+            </div>
+            </a>
         </article>
-        </div>
-     <div class="full">
-         <article class="text box three-quarters update" id="article">
-           <a class="wraplink" href="{{ article.get_absolute_url }}">
-           <div>
-           <h1>Research</h1>
-           <h2>{{ article.title }}</h2>
-           {{ article.excerpt_html|safe|truncatewords_html:30 }}
-           <p><a href="{{ article.get_absolute_url }}" class="tease">Read More</a></p>
-           </div>
-           </a>
+    </div>
+    <div class="full">
+        <article class="text box three-quarters update" id="article">
+            <a class="wraplink" href="{{ article.get_absolute_url }}">
+            <div>
+            <h1>Research</h1>
+            <h2>{{ article.title }}</h2>
+            {{ article.excerpt_html|safe|truncatewords_html:30 }}
+            <p><a href="{{ article.get_absolute_url }}" class="tease">Read More</a></p>
+            </div>
+            </a>
         </article>
-         {% for project in project_list|slice:"6:7" %}
-            <article class="project list box quarter" id="{{ project.slug }}">
-                <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+        {% for project in project_list|slice:"6:7" %}
+        <article class="project list box quarter" id="{{ project.slug }}">
+        <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
 
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-            </article>
+        {% for image in project.projectimage_set.all %}
+        {% if image.is_main %}
+            <a href="{{ project.get_absolute_url }}">
+                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+        {% endif %}
+        {%  endfor %}
+        </article>
         {% endfor %}
+    </div>
+</div>
+<div class="third">
+    <article class="text box full update" id="news">
+        <a class="wraplink" href="{{ news.get_absolute_url }}">
+        <div>
+            <h1>News</h1>
+            <h2>{{ news.title }}</h2>
+            {{ news.excerpt_html|safe|truncatewords_html:20 }}
+            <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
         </div>
-     </div>
-     <div class="third">
-         <article class="text box full update" id="news">
-           <a class="wraplink" href="{{ news.get_absolute_url }}">
-           <div>
-           <h1>News</h1>
-           <h2>{{ news.title }}</h2>
-           {{ news.excerpt_html|safe|truncatewords_html:20 }}
-           <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
-           </div>
-           </a>
-        </article>
-        {% for project in project_list|slice:"7:8" %}
-            <article class="project list box full featured" id="{{ project.slug }}">
-               <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+        </a>
+    </article>
+    {% for project in project_list|slice:"7:8" %}
+    <article class="project list box full featured" id="{{ project.slug }}">
+        <header><a href="{{ project.get_absolute_url }}"><h1>{{ project.name }}</h1></a></header>
+        {% for image in project.projectimage_set.all %}
+        {% if image.is_main %}
+            <a href="{{ project.get_absolute_url }}">
+                <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
+        {% endif %}
+        {%  endfor %}
 
-                {% for image in project.projectimage_set.all %}
-                    {% if image.is_main %}
-                        <a href="{{ project.get_absolute_url }}">
-                            <img alt="{{ project.title }}" src="{{ image.list.url }}" /></a>
-                    {% endif %}
-                {%  endfor %}
-
-            </article>
-        {% endfor %}
-
-     </div>
-
-
+    </article>
+    {% endfor %}
+</div>
 {% endblock content %}
 {% block js_local %}
     <script type="text/javascript">
