--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -97,11 +97,11 @@
             $("article.text div").css('min-height', height);
         }
         $(document).ready(function() {
-            Flex();
+            //Flex();
         });
 
         $(window).resize(function() {
-            Flex();
+            //Flex();
         });
     </script>
 {% endblock js_local %}
