added images for contact page

--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -46,7 +46,7 @@
             <h1>Research</h1>
             <h2>{{ article.title }}</h2>
             {{ article.excerpt_html|safe|truncatewords_html:30 }}
-            <p><a href="{{ article.get_absolute_url }}" class="tease">Read More</a></p>
+            <p>Read More</p>
             </div>
             </a>
         </article>
