--- a/futuregreen/templates/index.html
+++ b/futuregreen/templates/index.html
@@ -34,20 +34,21 @@
             <a class="wraplink" href="{% url studio %}">
             <div>
             {%  gblock "firm_profile" for "content.ContentBlock" with "content/contentblock/excerpt.html" %}
-            <p><a href="{% url studio %}" class="tease">Read More</a></p>
+            <p>Read More</p>
             </div>
             </a>
         </article>
     </div>
     <div class="full">
         <article class="text box three-quarters update" id="article">
-
+            <a class="wraplink" href="{{ article.get_absolute_url }}">
             <div>
             <h1>Research</h1>
             <h2>{{ article.title }}</h2>
             {{ article.excerpt_html|safe|truncatewords_html:30 }}
             <p>Read More</p>
             </div>
+            </a>
         </article>
         {% for project in project_list|slice:"6:7" %}
         <article class="project list box quarter" id="{{ project.slug }}">
@@ -70,7 +71,7 @@
             <h1>News</h1>
             <h2>{{ news.title }}</h2>
             {{ news.excerpt_html|safe|truncatewords_html:20 }}
-            <p><a href="{{ news.get_absolute_url }}" class="tease">Read More</a></p>
+            <p class="tease">Read More</p>
         </div>
         </a>
     </article>
