--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -272,7 +272,8 @@ body > footer > .contact {
     text-transform: uppercase;
     text-decoration: none;
     display:block;
-    margin-top:5px;
+    margin-top:10px;
+    color:#3d6e31;
 }
 
 .tease:after {
