--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1282,7 +1282,7 @@ ul#project-nav {
         margin: 0 12.5%;
     }
 
-    .home .text p {
-        font-size:1.2em;
+    .home .text {
+        font-size:120%;
     }
 }
