added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -272,7 +272,7 @@ body > footer > .contact {
     text-transform: uppercase;
     text-decoration: none;
     display:block;
-    margin-top:20px;
+    padding-top:10px;
     color:#3d6e31;
 }
 
