added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1276,6 +1276,7 @@ ul#project-nav {
 
 }
 
+/*
 @media screen and (min-width: 1440px) {
      body {
         width:75%;
@@ -1286,3 +1287,4 @@ ul#project-nav {
         font-size:120%;
     }
 }
+*/
