added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1285,4 +1285,8 @@ ul#project-nav {
     .home article.text {
         font-size:110%;
     }
+
+    .home article.text div {
+        width:75%;
+    }
 }
