added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1289,6 +1289,6 @@ ul#project-nav {
     .home article.text p {
         width:75%;
         margin: 0;
-        padding: 10px 0;
+        padding-top: 10px;
     }
 }
