added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1251,10 +1251,10 @@ ul#project-nav {
 }
 
 @media screen and (min-width: 1680px) {
-     body {
+     /*body {
         width:70%;
         margin: 0 20%;
-    }
+    }*/
 
     .home article.text {
         font-size:110%;
