--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -1171,7 +1171,7 @@ ul#project-nav {
     width:100%;
     height:100%;
     padding: 10px;
-     -webkit-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
@@ -1182,6 +1182,8 @@ ul#project-nav {
 }
 
 /******** MEDIA QUERIES **********/
+
+
 @media screen and (max-width: 1024px) {
     section.text article {
         font-size:0.92857em;
@@ -1190,8 +1192,14 @@ ul#project-nav {
 
 @media screen and (max-width: 1120px) and (min-width: 1024px) {
     body {
-        width:98.33334%;
-        margin: 0 .83333%;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        -o-box-sizing: border-box;
+        -ms-box-sizing: border-box;
+        box-sizing: border-box;
+        width:100%;
+        margin: 0;
+        padding: 10px;
     }
 
     div.main section.text article {
