added images for contact page

--- a/futuregreen/templates/studio/newsitem_archive_month.html
+++ b/futuregreen/templates/studio/newsitem_archive_month.html
@@ -1,4 +1,4 @@
-{% extends "research/newsitem_list.html" %}
+{% extends "studio/newsitem_list.html" %}
 {% block page_title %}: News: {{ month|date:"F Y" }} {% endblock page_title %}
 {% block content_title %}
         <h1>Studio: News: {{ month|date:"F Y" }}</h1>
