--- a/futuregreen/templates/portfolio/project_detail.html
+++ b/futuregreen/templates/portfolio/project_detail.html
@@ -73,12 +73,14 @@
                             </p>
                         </li>
                     {% endif %}
+                    {% if project.area %}
                     <li class="box">
                         <p class="size square">
                         <span class="number">{{ project.area|floatformat }}</span>
                         <span class="unit">{{ project.get_unit_display }}</span>
                         </p>
                     </li>
+                    {% endif %}
                     </ul>
                 </div>
                 {% if project.clients.all or project.collaborators.all %}
