added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -977,7 +977,7 @@ body.studio.news .main{
 }
 
 .details .meta ul.linked-list {
-    margin:0 0 0 15px;
+    margin:5px 0 0 15px;
     padding: 0;
 }
 
