--- a/futuregreen/templates/contact.html
+++ b/futuregreen/templates/contact.html
@@ -2,6 +2,7 @@
 {% load generic_flatblocks %}
 {% block body_class %}contact{% endblock body_class %}
 {% block content %}
+<div class="full">
     <section class="box sixth">
         <img class="flex" src="{{ STATIC_URL }}images/contact/contact_01.jpg" alt="Map Tile 1"/>
     </section>
@@ -20,6 +21,8 @@
         </div>
         <img class="flex" src="{{ STATIC_URL }}images/contact/contact_05.jpg" alt="Map Tile 5"/>
     </section>
+</div>
+<div class="full">
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_06.jpg" alt="Map Tile 6"/>
     </section>
@@ -40,6 +43,8 @@
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_11.jpg" alt="Map Tile 11"/>
     </section>
+</div>
+<div class="full">
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_12.jpg" alt="Map Tile 12"/>
     </section>
@@ -58,6 +63,7 @@
     <section class="box sixth">
         <img  class="flex" src="{{ STATIC_URL }}images/contact/contact_17.jpg" alt="Map Tile 17"/>
     </section>
+</div>
 {% endblock content %}
 {% block js_local %}
     <script type="text/javascript">
