--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -5,6 +5,9 @@
             {% block filter_nav %}
                 <nav class="box">
                     <ul class="categories">
+                        <li><a {% if not type.slug == category.slug %}class="active"{% endif %}
+                               href="{% url portfolio %}"
+                               class="square center">ALL</a></li>
                         {% for type in projecttype_list %}
                             <li {% if type.slug == category.slug %}class="active"{% endif %}>
                                 <a href="{% url portfolio_projects_by_type type.slug %}"
