--- a/futuregreen/templates/portfolio/project_list.html
+++ b/futuregreen/templates/portfolio/project_list.html
@@ -6,7 +6,7 @@
                 <nav class="box">
                     <ul class="categories">
                         <li><a {% if not type.slug == category.slug %}class="active"{% endif %}
-                               href="{% url portfolio %}"
+                               href="{% url portfolio_project_list %}"
                                class="square center">ALL</a></li>
                         {% for type in projecttype_list %}
                             <li {% if type.slug == category.slug %}class="active"{% endif %}>
