added images for contact page

--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -588,6 +588,7 @@ body.studio.news .main{
 
 .categories li a {
         color:#fff;
+        background: #ccc;
         float:left;
         width:100%;
         font-weight: bold;
