--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -56,7 +56,8 @@
             <h1 class="overlay">News</h1>
             </section>
             <section class="box quarter">
-                <p class="date">
+                <div class="date">
+                    
                     <span class="month">{{ news.date_published|date:"M" }}</span>
                     <span class="day">{{ news.date_published|date:"d" }}</span>
                 </p>
