--- a/futuregreen/static/css/base.css
+++ b/futuregreen/static/css/base.css
@@ -497,15 +497,18 @@ body.studio.news .main{
 
 .home article#profile div {
     background:url('images/profile_bg.png') no-repeat right top;
-    padding: 10px;
 }
 
 .home article#profile h2 {
     font-family: purista-web-1,purista-web-2, sans-serif;
     font-size:1.71428em;
     text-transform: uppercase;
-    padding:0 0 10px 0;
+    padding:10px;
     color:#3d6e31;
+}
+
+.home article#profile p {
+    padding: 0 10px;
 }
 
 .home article.text h1 {
