added images for contact page

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -57,10 +57,11 @@
             </section>
             <section class="box quarter">
                 <div class="date">
-                    
-                    <span class="month">{{ news.date_published|date:"M" }}</span>
-                    <span class="day">{{ news.date_published|date:"d" }}</span>
-                </p>
+                    <ul>
+                        <li class="month">{{ news.date_published|date:"M" }}</li>
+                        <li class="day">{{ news.date_published|date:"d" }}</li>
+                    </ul>
+                </div>
             </section>
             <section class="box three-quarters">
                 <h2>{{ news.title }}</h2>
