added images for contact page

--- a/futuregreen/templates/studio/studio_index.html
+++ b/futuregreen/templates/studio/studio_index.html
@@ -57,7 +57,7 @@
             </section>
             <section class="box quarter">
                 <div class="date">
-                    <ul>
+                    <ul class="square">
                         <li class="month">{{ news.date_published|date:"M" }}</li>
                         <li class="day">{{ news.date_published|date:"d" }}</li>
                     </ul>
